[tool.poetry]
name = "rpc-analysis"
version = "0.1.0"
description = "Poetry file to rpc analysis"
authors = ["Pedro Alvarez"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.3"
streamlit = "^1.40.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
lifelines = "^0.30.0"
jupyter = "^1.1.1"
jupyterlab = "^4.3.1"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"